--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!--Open Graph Related Stuff-->
-   <title>Generative Models for Computer Vision</title>
+   <title>Neural Fields in Principle</title>
     <link rel="stylesheet" href="data/foundation.css">
     <link rel="stylesheet" href="data/main.css">
 
@@ -55,9 +55,9 @@
 
     <section role="main" style="padding: 1em;">
         <div class="row">
-            <p style="font-size:50px; color:black; font-weight: 50" align="center">Generative Models for Computer Vision
-                <br>
-                <span style="font-size:30px; color:black; font-weight: 50" align="center">CVPR 2023, June 18th<br> </span>
+            <p style="font-size:50px; color:black; font-weight: 50" align="center">Neural Fields in Principle Models for Computer Vision
+<!--                 <br> -->
+<!--                 <span style="font-size:30px; color:black; font-weight: 50" align="center">CVPR 2023, June 18th<br> </span> -->
 
 <!--                  <span style="font-size:20px; color:gray; font-weight: 30" align=center>9:00am-6:00pm Israeli Time  ||  11:00pm (October 22)-8:00am Pacific Time  ||  2:00pm-11:00pm Beijing Time</span>   -->             
                 <!-- <br> -->
@@ -65,10 +65,9 @@
                 <!-- <span style="font-size:20px; color:black; font-weight: 400" align=center>Zoom and Gatherly links on ECCV 2022 website: <a target="_blank" href="https://www.eventscribe.net/2021/2021CVPR/agenda.asp?startdate=6/19/2021&enddate=6/19/2021&BCFO=M&pfp=Workshops&mode=&tn=&cpftwo=&custwo=&pta=/">Link</a> <br> Navigate to: Workshops -> Sat, October 23 -> Search for "Computer Vision in the Wild" workshop entry</b></span> -->
 
             </p>
-
+<!-- 
 	<div class="row">
                 <h1 style="font-size:30px; color:grey; font-weight: 200">Invited Speakers</h1>
-<!--                 <img src="data/speakers.jpg" > -->
             </div>
 		
 	    <div style="text-align: center;">
@@ -123,19 +122,19 @@
 			    <p style = "margin:4px">CMU</p>
 		    </div>
 		</a>
-	    </div>
+	    </div> -->
 			
 			
 
 			
 			
 	
-			<br>
-			<br>
+<!-- 			<br>
+			<br> -->
 
 
 			
-	    <div class="instructor2">
+<!-- 	    <div class="instructor2">
 		<a href="https://bmild.github.io/">
 		    <div><img src="data/ben.jpeg"></div>
 		    <div>
@@ -188,7 +187,7 @@
 			    <p style = "margin:4px">JHU</p>
 		    </div>
 		</a>
-	    </div>			
+	    </div>			 -->
 			
 			
 			
