--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section role="main" style="padding: 1em;">
         <div class="row">
-            <p style="font-size:50px; color:black; font-weight: 50" align="center">Neural Fields in Principle Models for Computer Vision
+            <p style="font-size:50px; color:black; font-weight: 50" align="center">Neural Fields in Principle
 <!--                 <br> -->
 <!--                 <span style="font-size:30px; color:black; font-weight: 50" align="center">CVPR 2023, June 18th<br> </span> -->
 
