--- a/index.html
+++ b/index.html
@@ -205,13 +205,17 @@
 <!--                 <p style="font-size:15px; font-weight: 400; text-align:left">   -->
 	    	
 		<p style="font-size:15px; font-weight: 400; text-align:justify" align="justify">
-Recent advances in generative modeling leveraging generative adversarial networks, auto-regressive models, neural fields and diffusion models have enabled the synthesis of near photorealistic images, drastically increasing the visibility and popularity of generative modeling across the computer vision research community. However, these impressive advances in generative modeling have not yet found wide adoption in computer vision for visual recognition tasks. In this workshop, we aim to bring together researchers from the fields of image synthesis and computer vision to facilitate discussions and progress at the intersection of those two subfields. We investigate the question: "How can visual recognition benefit from the advances in generative image modeling?". We invite a diverse set of experts to discuss their recent research results and future directions for generative modeling and computer vision, with a particular focus on the intersection between image synthesis and visual recognition. We hope this workshop will lay the foundation for future development of generative models for computer vision tasks.
+			As an expansion of physical fields into the realm of artificial intelligence, neural fields have shown intriguing success in neural rendering, 3D reconstruction, scene understanding, pose estimation, etc.
+			However, while existing works have focused on demonstrating the capabilities of neural fields, there has been less emphasis on understanding the fundamental principles that underlie the observed experimental phenomena. 
+			By drawing inspiration from physical fields where numerous fundamental principles has been rigorously derived and built, this workshop aims to foster discussions and uncover the essential principles and properties of 
+			neural fields that drive the observed experimental phenomena. This workshop invites researchers to delve into the foundational aspects and underlying mechanisms behind the success of neural fields, which could help 
+			to lay a sound foundation for the employment of neural fields in broad areas.
                 </p>
 				
             </div>
 		
 		<div style="text-align: center;">
-		<img src="data/overview.jpg" width="850">
+		<img src="data/overview.png" width="850">
 			
 		<br>
 		
