--- a/index.html
+++ b/index.html
@@ -342,31 +342,34 @@
                         <br>
                     
                         <li style="margin-left:30px">
-                            Advances in generative image models
+                            Advances in neural fields, including NeRF and neural rendering.
                         </li>
                         <li style="margin-left:30px">
-                            Inversion of generative image models
+                            Encoding function and coordinate transformation in neural fields.
                         </li>
                         <li style="margin-left:30px">
-                            Training computer vision with realistic synthetic images
+                            MLP-based neural fields versus Grid-based neural fields.
                         </li>
                         <li style="margin-left:30px">
-                            Benchmarking computer vision with generative models
+                            Smoothness and robustness of neural fields.
                         </li>
                         <li style="margin-left:30px">
-                            Analysis-by-synthesis / render-and-compare approaches for visual recognition
+                            Generative models in neural fields.
                         </li>
                         <li style="margin-left:30px">
-                            Self-supervised learning with generative models
+                            Analysis-by-synthesis with neural fields.
                         </li>
                         <li style="margin-left:30px">
-                            Adversarial attacks and defenses with generative models
+                            Label transfer and correspondence learning in neural fields.
                         </li>						
                         <li style="margin-left:30px">
-                            Out-of-distribution generalization and detection with generative models
+                            Specific properties in 2D, 3D, 4D, etc., neural fields.
+                        </li>
+			<li style="margin-left:30px">
+                            Neural fields for science.
                         </li>
                         <li style="margin-left:30px">
-                            Ethical considerations in generative modeling, dataset and model biases
+                            Ethical considerations in neural fields, dataset and model biases.
                         </li>						
                 </ul>         
 	</div>
