--- a/index.html
+++ b/index.html
@@ -336,10 +336,11 @@
                     <h1 style="font-size:30px; color:grey; font-weight: 200">Call for Papers</h1>
 	<div class="large-12 columns" style="text-align:left;">
 		    <ul style="font-size:15px;">
-			    <b>Submission site:</b> <a href="https://cmt3.research.microsoft.com/GCV2023/">https://cmt3.research.microsoft.com/GCV2023/</a>. <br>
-			    <b>Author kit:</b> <a href="https://media.icml.cc/Conferences/CVPR2023/cvpr2023-author_kit-v1_1-1.zip">CVPR Author KIT</a>.<br>
-			    We invite submissions of both <b>short and long papers</b> (4 pages and 8 pages respectively excluding references). The long papers will be included in the proceedings of CVPR. Potential topics include but are not limited to:
-                        <br>
+<!-- 			    <b>Submission site:</b> <a href="https://cmt3.research.microsoft.com/GCV2023/">https://cmt3.research.microsoft.com/GCV2023/</a>. <br> -->
+<!-- 			    <b>Author kit:</b> <a href="https://media.icml.cc/Conferences/CVPR2023/cvpr2023-author_kit-v1_1-1.zip">CVPR Author KIT</a>. <br> -->
+			    We invite submissions of both <b>short and long papers</b> (4 pages and 8 pages respectively excluding references). <br> 
+			    The long papers will be included in the proceedings of CVPR. <br> 
+			    Potential topics include but are not limited to: <br>
                     
                         <li style="margin-left:30px">
                             Advances in neural fields, including NeRF and neural rendering.
@@ -492,7 +493,7 @@
 		<br>
 		<br>
 		<br>
-		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=656565&w=400&t=tt&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI&co=73c5ff'></script>
+<!-- 		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=656565&w=400&t=tt&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI&co=73c5ff'></script> -->
 <!-- 		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=n&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI'></script> -->
 <!-- 	    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI'></script> -->
 <!-- 	    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI'></script> -->
