--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
 		<br>
 		<br>
 		<br>
+		    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=46xpoU7l0x175HX9OM1n3Cbf9JxW9Yd2HmDFVmTEatk"></script>
 <!-- 		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=656565&w=400&t=tt&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI&co=73c5ff'></script> -->
 <!-- 		<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=n&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI'></script> -->
 <!-- 	    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=pa5MCNZnvFjNm_hrbI6_4n6zYKb35I870KvtRZOaBbI'></script> -->
