--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 <!-- 			    <b>Submission site:</b> <a href="https://cmt3.research.microsoft.com/GCV2023/">https://cmt3.research.microsoft.com/GCV2023/</a>. <br> -->
 <!-- 			    <b>Author kit:</b> <a href="https://media.icml.cc/Conferences/CVPR2023/cvpr2023-author_kit-v1_1-1.zip">CVPR Author KIT</a>. <br> -->
 			    We invite submissions of both <b>short and long papers</b> (4 pages and 8 pages respectively excluding references). <br> 
-			    The long papers will be included in the proceedings of CVPR. <br> 
+			    The long papers will be included in the proceedings of NeurIPS. <br> 
 			    Potential topics include but are not limited to: <br>
                     
                         <li style="margin-left:30px">
