--- a/index.html
+++ b/index.html
@@ -413,6 +413,18 @@
 	
 
 <div style="text-align: center;">
+	
+	
+   
+    <div class="instructor">
+	<a href="https://fnzhan.com/">
+	    <div><img src="data/fangneng.jpeg"></div>
+	    <div>
+		    <p style = "margin:4px">Fangneng Zhan</p>
+		    <p style = "margin:4px">MPI-INF</p>
+	    </div>
+	</a>
+    </div>
 
     <div class="instructor">
 	<a href="https://generativevision.mpi-inf.mpg.de/">
@@ -428,26 +440,15 @@
 
 
     <div class="instructor">
-	<a href="https://fnzhan.com/">
-	    <div><img src="data/fangneng.jpeg"></div>
+	<a href="https://ayushtewari.com/">
+	    <div><img src="data/ayush.png"></div>
 	    <div>
-		    <p style = "margin:4px">Fangneng Zhan</p>
-		    <p style = "margin:4px">MPI-INF</p>
+		    <p style = "margin:4px">Ayush Tewari</p>
+		    <p style = "margin:4px">MIT</p>
 	    </div>
 	</a>
     </div>
-
-
-    <div class="instructor">
-	<a href="https://lingjie0206.github.io/">
-	    <div><img src="data/lingjie.jpeg"></div>
-	    <div>
-		    <p style = "margin:4px">Lingjie Liu</p>
-		    <p style = "margin:4px">MPI-INF</p>
-	    </div>
-	</a>
-    </div>
-
+<!-- 
     <div class="instructor">
 	<a href="https://www.vincentsitzmann.com/">
 	    <div><img src="data/vincent.jpeg"></div>
@@ -456,8 +457,8 @@
 		    <p style = "margin:4px">MIT</p>
 	    </div>
 	</a>
-    </div>
-
+    </div> -->
+<!-- 
     <div class="instructor">
 	<a href="https://www.cs.jhu.edu/~ayuille/">
 	    <div><img src="data/alan.jpeg"></div>
@@ -466,7 +467,7 @@
 		    <p style = "margin:4px">JHU</p>
 	    </div>
 	</a>
-    </div>
+    </div> -->
 	
 	
     <div class="instructor">
