--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
     <div class="instructor">
 	<a href="https://ayushtewari.com/">
-	    <div><img src="data/ayush.png"></div>
+	    <div><img src="data/ayush.jpg"></div>
 	    <div>
 		    <p style = "margin:4px">Ayush Tewari</p>
 		    <p style = "margin:4px">MIT</p>
