--- a/index.html
+++ b/index.html
@@ -434,9 +434,18 @@
 		<p style = "margin:4px">MPI-INF</p>
 	    </div>
 	</a>
-		
-	
     </div>
+	
+	
+    <div class="instructor">
+	<a href="https://apchenstu.github.io/">
+	    <div><img src="data/anpei.jpeg"></div>
+	    <div>
+		    <p style = "margin:4px">Anpei Chen</p>
+		    <p style = "margin:4px">ETH Zürich</p>
+	    </div>
+	</a>
+    </div> -->
 
 
     <div class="instructor">
