--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 	
     <div class="instructor">
 	<a href="https://apchenstu.github.io/">
-	    <div><img src="data/anpei.jpeg"></div>
+	    <div><img src="data/anpei.png"></div>
 	    <div>
 		    <p style = "margin:4px">Anpei Chen</p>
 		    <p style = "margin:4px">ETH Zürich</p>
