--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+<!--                 <li class="nav-item">
                   <a href="#tracks" class="nav-link">Tracks</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a href="#submission" class="nav-link">Submission</a>
                 </li>
@@ -230,18 +230,18 @@
                 <li class="nav-item">
                   <a href="#speakers" class="nav-link">Speakers</a>
                 </li>
-                <li class="nav-item">
+<!--                 <li class="nav-item">
                   <a href="#awards" class="nav-link">Awards</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a href="#organizers" class="nav-link">Organizers</a>
                 </li>
                 <!-- <li class="nav-item">
                   <a href="#sponsors" class="nav-link">Sponsors</a>
                 </li> -->
-                <li class="nav-item">
+<!--                 <li class="nav-item">
                   <a href="#previous" class="nav-link">Previous MIPI</a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -260,8 +260,7 @@
       <!-- Hero slider + BG parallax -->
       <section class="jarallax dark-mode bg-dark py-xxl-5" data-jarallax data-speed="0.4">
         <span class="position-absolute top-0 start-0 w-100 h-100 bg-gradient-dark-translucent"></span>
-        <!-- Shangchen TODO: Replace images here -->
-        <div class="jarallax-img" style="background-image: url(../assets/img/backgrounds/head-bg-2023.jpg);"></div>
+<!--         <div class="jarallax-img" style="background-image: url(../assets/img/backgrounds/head-bg-2023.jpg);"></div> -->
         <div class="position-relative text-center zindex-5 overflow-hidden pt-4 py-md-5">
 
           <!-- Slider controls (Prev / next) -->
@@ -295,12 +294,12 @@
                   <div class="swiper-wrapper">
                     <!-- Shangchen TODO: Replace text here -->
                     <div class="swiper-slide">
-                      <h2 class="display-4 from-start mb-lg-1">Mobile Intelligent Photography & Imaging <br>
+                      <h2 class="display-4 from-start mb-lg-1">Neural Fields in Principle<br>
                         Workshop 2023</h2>
                       <div class="from-end">
-                        <p class="fs-4 text-light opacity-70 pb-2 mb-lg-5">MIPI Workshop in conjunction with <font color="#f029cf"><b>CVPR 2023</b></font> <br>
+                        <p class="fs-4 text-light opacity-70 pb-2 mb-lg-5">Workshop in conjunction with <font color="#f029cf"><b>NeurIPS 2023</b></font> <br>
                           <span style="font-size:1.3rem"> <i class="fa fa-calendar" style="color:#f029cf"></i> Sunday June 18th, 2023  &nbsp; &nbsp; &nbsp; 
-                            <i class="fa fa-map-marker" style="color:#f029cf"></i> Vancouver, Canada </span>
+                            <i class="fa fa-map-marker" style="color:#f029cf"></i> New Orleans, USA </span>
                         </p>
                       </div>
                       <div class="scale-up delay-0">
