--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MIPI Challenge 2023</title>
+    <title>Neural Fields in Principle</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Silicon - Multipurpose Technology Bootstrap Template">
@@ -206,7 +206,7 @@
         <div class="container px-3">
           <a href="index.html" class="navbar-brand pe-3">
             <img src="../assets/img/logo.png" width="47" alt="Logo">
-            MIPI
+<!--             MIPI -->
           </a>
           <div id="navbarNav" class="offcanvas offcanvas-end">
             <div class="offcanvas-header border-bottom">
