--- a/index.html
+++ b/index.html
@@ -1608,7 +1608,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
         display: block;
       }
     </style>
-    <section id="previous" class="bg-secondary py-5">
+<!--     <section id="previous" class="bg-secondary py-5">
       <div class="container">
         <div class="row pt-4 pb-3">
           <h2 class="text-center text-sm-start pb-2 pb-lg-0">Previous MIPI</h2>
@@ -1625,7 +1625,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
 
         </div>
       </div>
-    </section>
+    </section> -->
 
   </main>
     <!-- Footer -->
@@ -1633,9 +1633,9 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
         <div class="container text-center pt-lg-3 opacity-90">
         <div class="navbar-brand justify-content-center text-dark mb-2 mb-lg-4">
           <img src="../assets/img/logo.png" class="me-2" width="60" alt="Logo">
-          <span class="fs-4">MIPI</span>
+          <span class="fs-4">Neural Fields in Principle</span>
         </div>
-        <ul class="nav justify-content-center opacity-90">
+<!--         <ul class="nav justify-content-center opacity-90">
           <li class="nav-item">
             <a href="#tracks" class="nav-link">Tracks</a>
           </li>
@@ -1657,22 +1657,19 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
           <li class="nav-item">
             <a href="#organizers" class="nav-link">Organizers</a>
           </li>
-          <!-- <li class="nav-item">
-            <a href="#sponsors" class="nav-link">Sponsors</a>
-          </li> -->
           <li class="nav-item">
             <a href="#previous" class="nav-link">Previous MIPI</a>
           </li>
-        </ul>
+        </ul> -->
         <p class="text-center text-light pt-3 mt-lg-4 mb-0 opacity-90">
-          Workshop Location: Vancouver, Canada
+          Workshop Location: New Orleans, USA
         </div>
         <p class="text-center text-light mt-lg-4 mb-0 opacity-90">
           Contact: 
-          <a href="mailto:mipi.challenge@gmail.com">mipi.challenge@gmail.com</a>
+          <a href="mailto:mipi.challenge@gmail.com">fzhan@mpi-inf.mpg.com</a>
         </div>
         <p class="fs-sm text-center pt-3 mt-lg-4 mb-0 opacity-90">
-          <span class="text-light"> Copyright &copy; MIPI Challenge 2023
+          <span class="text-light"> Copyright &copy; Neural Fields in Principle 2023
         </p>
       </div>
     </footer>
