--- a/index.html
+++ b/index.html
@@ -1349,8 +1349,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../assets/img/organizer/chongyi_li.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Chongyi Li</h5>
-                  <p class="fs-sm mb-3">Nanyang Technological University</p>
+                  <h5 class="fw-medium fs-lg mb-1">Fangneng Zhan</h5>
+                  <p class="fs-sm mb-3">Max Planck Institute for Informatics</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://li-chongyi.github.io/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
                       <i class="bx bx-home"></i>
@@ -1369,8 +1369,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../assets/img/organizer/shangchen_zhou.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Shangchen Zhou</h5>
-                  <p class="fs-sm mb-3">Nanyang Technological University</p>
+                  <h5 class="fw-medium fs-lg mb-1">Adam Kortylewski</h5>
+                  <p class="fs-sm mb-3">Max Planck Institute for Informatics</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://shangchenzhou.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
                       <i class="bx bx-home"></i>
@@ -1389,8 +1389,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../assets/img/organizer/ruicheng_feng.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Ruicheng Feng</h5>
-                  <p class="fs-sm mb-3">Nanyang Technological University</p>
+                  <h5 class="fw-medium fs-lg mb-1">Anpei Chen</h5>
+                  <p class="fs-sm mb-3">ETH Zurich</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://jnjaby.github.io/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
                       <i class="bx bx-home"></i>
@@ -1409,8 +1409,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../assets/img/organizer/yuekun_dai.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Yuekun Dai</h5>
-                  <p class="fs-sm mb-3">Nanyang Technological University</p>
+                  <h5 class="fw-medium fs-lg mb-1">Ayush Tewari</h5>
+                  <p class="fs-sm mb-3">MIT</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://scholar.google.com.sg/citations?user=UyKX7ZsAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
                       <i class="bx bxl-google"></i>
@@ -1426,8 +1426,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../assets/img/organizer/qingpeng_zhu.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
-                  <h5 class="fw-medium fs-lg mb-1">Qingpeng Zhu</h5>
-                  <p class="fs-sm mb-3">SenseTime/Tetras.AI</p>
+                  <h5 class="fw-medium fs-lg mb-1">Christian Theobalt</h5>
+                  <p class="fs-sm mb-3">MPI-INF</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://scholar.google.com/citations?user=B7roEzMAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
                       <i class="bx bxl-google"></i>
@@ -1439,8 +1439,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 </div>
               </div>
 
-              <!-- Item -->
-              <div class="col-md-3 py-3">
+
+<!--               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../assets/img/organizer/qianhui_sun.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Qianhui Sun</h5>
@@ -1454,101 +1454,8 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                     </a>
                   </div>
                 </div>
-              </div>
-
-              <!-- Item -->
-              <div class="col-md-3 py-3">
-                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/wenxiu_sun.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Wenxiu Sun</h5>
-                  <p class="fs-sm mb-3">SenseTime/Tetras.AI</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="http://wenxiusun.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                      <i class="bx bx-home"></i>
-                    </a>
-                    <a href="https://scholar.google.com.sg/citations?hl=en&user=X9lE6O4AAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:sunwenxiu@sensetime.com" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-  
-              <!-- Item -->
-              <!-- <div class="col-md-3 py-3">
-                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/qingyu_yang.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Qingyu Yang</h5>
-                  <p class="fs-sm mb-3">SenseBrain</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://scholar.google.com/citations?user=8k_A7UgAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:yangqingyu@sensebrain.site" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
-                </div>
               </div> -->
 
-              <!-- Item -->
-              <!-- <div class="col-md-3 py-3">
-                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/qingpeng_zhu.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
-                  <h5 class="fw-medium fs-lg mb-1">Qingpeng Zhu</h5>
-                  <p class="fs-sm mb-3">SenseTime/Tetras.AI</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://scholar.google.com/citations?user=B7roEzMAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:zhuqingpeng@tetras.ai" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
-                </div>
-              </div> -->
-
-              <!-- Item -->
-              <div class="col-md-3 py-3">
-                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/cavan.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Chen Change Loy</h5>
-                  <p class="fs-sm mb-3">Nanyang Technological University</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://www.mmlab-ntu.com/person/ccloy/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                      <i class="bx bx-home"></i>
-                    </a>
-                    <a href="https://scholar.google.co.uk/citations?user=559LF80AAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:ccloy@ntu.edu.sg" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Item -->
-              <div class="col-md-3 py-3">
-                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/jinwei_gu.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Jinwei Gu</h5>
-                  <p class="fs-sm mb-3">SenseBrain</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://www.gujinwei.org/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
-                      <i class="bx bx-home"></i>
-                    </a>
-                    <a href="https://scholar.google.com/citations?user=k_T8t30AAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:gujinwei@sensebrain.ai" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
 
             </div>
           </div>
