--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
           
           
 <!--             <p style="font-size:50px; color:black; font-weight: 50" align="center">Neural Fields in Principle -->
-          <p style="font-size:75px; color:rgb(255, 255, 255); font-weight: 75" align="center"><b>Neural Fields in Principle</b></p><br>
-           <p style="font-size:75px; color:rgb(255, 255, 255); font-weight: 75" align="center">Workshop 2023</p><br>
+          <p style="font-size:75px; color:rgb(255, 255, 255); font-weight: 65" align="center"><b>Neural Fields in Principle</b></p>
+           <p style="font-size:75px; color:rgb(255, 255, 255); font-weight: 50" align="center">Workshop 2023</p><br>
           <p class="fs-4 text-light opacity-70 pb-2 mb-lg-5">Workshop in conjunction with <font color="#f029cf"><b>NeurIPS 2023</b></font> <br>
                           <span style="font-size:1.3rem"> <i class="fa fa-calendar" style="color:#f029cf"></i> Sunday June 18th, 2023  &nbsp; &nbsp; &nbsp; 
                             <i class="fa fa-map-marker" style="color:#f029cf"></i> New Orleans, USA </span>
