--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<!--                 <li class="nav-item">
-                  <a href="#tracks" class="nav-link">Tracks</a>
-                </li> -->
+                <li class="nav-item">
+                  <a href="#overview" class="nav-link">Overview</a>
+                </li>
                 <li class="nav-item">
                   <a href="#submission" class="nav-link">Submission</a>
                 </li>
@@ -315,30 +315,22 @@
       </section>
       <!-- tracks -->
       <section id="tracks" class="container py-5">
-        <div class="row pt-4 pb-3">
+<!--         <div class="row pt-4 pb-3">
           <h2 class="text-center text-sm-start pb-2 pb-lg-0">Challenge Tracks</h2>
-        </div>
+        </div> -->
         <div class="row">
           <!-- Item -->
           <h3>Overview</h3>
           <div class="col">
             <p>
-              Developing and integrating advanced image sensors with novel algorithms in camera systems is prevalent with the increasing demand for computational
-               photography and imaging on mobile platforms. However, the lack of high-quality data for research and the rare opportunity for in-depth exchange of
-                views from industry and academia constrain the development of mobile intelligent photography and imaging (MIPI).
+              As an expansion of physical fields into the realm of artificial intelligence, neural fields have shown intriguing success in computer vision, computer graphic, robotics, etc. 
+              However, while existing works have focused on demonstrating the capabilities of neural fields, there has been less emphasis on understanding the fundamental principles that 
+              underlie the observed experimental phenomena. By drawing inspiration from physical fields where numerous fundamental principles has been rigorously derived and built, this 
+              workshop aims to foster discussions and uncover the essential principles and properties of neural fields that drive the observed experimental phenomena. This workshop invites 
+              researchers to delve into the foundational aspects and underlying mechanisms behind the success of neural fields, which could help to lay a sound foundation for the employment 
+              of neural fields in broad areas.
             </p>
-            <p>
-              The workshop's main focus is on MIPI, emphasizing the integration of novel image sensors and imaging algorithms. Together with the workshop, 
-              we organize a few exciting challenges and invite renowned researchers from both industry and academia to share their insights and recent work. 
-              Our challenge includes four tracks:
-            </p>
-            <ul>
-              <!-- <li>
-                <a href="https://codalab.lisn.upsaclay.fr/competitions/xxxx", class="badge bg-primary fs-sm">
-                  Automatic Black-box ISP Tuning
-                </a>
-                is to search for the optimal ISP parameters to convert input RAW Bayer images to target JPEG images.
-              </li> -->
+<!--             <ul>
               <li>
                 <a href="https://codalab.lisn.upsaclay.fr/competitions/9402", class="badge bg-primary fs-sm", target="_blank">
                   Nighttime Flare Removal
@@ -363,17 +355,9 @@
                 </a>
                 fuses Bayer data and a monochrome channel data into Bayer format to increase SNR and spatial resolution.
               </li>
-            </ul>
-            <p>
-              Unlike previous workshops that focus on image or video manipulation, restoration and enhancement, or the efficient designs of AI models for mobile devices, 
-              the central theme of our workshop encompasses new sensors and imaging systems, which are the indispensable foundation for mobile intelligent photography 
-              and imaging. As the first workshop of this kind, MIPI aims to organize a dedicated workshop so that we can solicit relevant solutions and attract a focused 
-              group from both academia and industry for fruitful discussions.
-            </p>
-            <!-- <p><font color="#f029cf"><b>The competition site is under preparation, please stay tuned!</b></font></p> -->
+            </ul> -->
           </div>
-
-          <!-- Item -->
+<!-- 
           <h3>Datasets and Submission</h3>
           <div class="col">
             <p>
@@ -381,9 +365,6 @@
             </p>
             <p>
               Link to Codalab:
-              <!-- <a href="https://codalab.lisn.upsaclay.fr/competitions/xxxx", class="badge bg-light shadow-primary fs-sm">
-                <b>Automatic Black-box ISP Tuning</b>
-              </a> -- -->
               <a href="https://codalab.lisn.upsaclay.fr/competitions/9402", class="badge bg-light shadow-primary fs-sm", target="_blank">
                 <b>Nighttime Flare Removal</b>
               </a> --
@@ -397,34 +378,31 @@
                 <b>RGBW Sensor Fusion</b>
               </a> 
             </p>
-          </div>
+          </div> -->
 
-          <!-- Item -->
-          <h3>Awards</h3>
+<!--           <h3>Awards</h3>
           <div class="col">
             <p>
               The winner teams of each track will receive a certificate. Challenge participants with the most successful and innovative methods will be invited 
               to present at the MIPI workshop. 
             </p>
-          </div>
+          </div> -->
 
-          <!-- Item -->
-          <h3>Terms and Conditions</h3>
+<!--           <h3>Terms and Conditions</h3>
           <div class="col">
             <p>Link to <a href="../terms.html">Terms and Conditions</a>.</p>
             <p>
               In the event of any inconsistency between the terms and details of this website and Codalab competition sites, the details on the Codalab sites shall prevail.
             </p>
-          </div>       
-
-          <!-- Item -->
+          </div>        -->
+<!-- 
           <h3>Contact</h3>
           <div class="col">
             <p>
               For more information, please contact us at
               <a href="mailto:mipi.challenge@gmail.com">mipi.challenge@gmail.com</a>.
             </p>
-          </div>       
+          </div>        -->
 
         </div>
       </section>
@@ -436,28 +414,30 @@
             <h2 class="text-center text-sm-start pb-2 pb-lg-0">Call for Papers</h2>
           </div>
           <div class="row pt-4 pb-3">
-            <h4 class="text-center text-sm-start pb-2 pb-lg-0">CVPR 2023 Workshop:</h4>
+            <h4 class="text-center text-sm-start pb-2 pb-lg-0">NeurIPS 2023 Workshop:</h4>
           </div>
           <div class="row">
             <div class="col">
                 <p>
-                  Coupled with the workshop, besides the challenge, we also provide a fertile ground for researchers, scientists, 
-                  and engineers from around the world to disseminate their research outcomes and push forward the frontiers of 
-                  knowledge within novel image sensors and imaging systems-related areas.
-                  The MIPI workshop topics cover but are not limited to:
+                  We invite submissions of both <b>short and long papers</b> (4 pages and 8 pages respectively excluding references). <br> 
+			            The long papers will be included in the proceedings of NeurIPS. <br> 
+			            Potential topics include but are not limited to: <br>
                 </p>
                 <ul>
                     <strong>
-                    <li>Learnable ISPs</li>
-                    <li>ToF depth completion</li>
-                    <li>RGBW sensor re-mosaic and fusion</li>
-                    <li>Nighttime image restoration</li>
-                    <li>Under-display camera image restoration</li>
-                    <li>Event camera for image/video restoration</li>
-                    <li>Learning-based computational imaging systems:  efficient algorithms, smart imaging systems, learned data acquisition, task-driven ISPs, etc</li>
+                    <li>Advances in neural fields, including NeRF and neural rendering.</li>
+                    <li>Encoding function and coordinate transformation in neural fields.</li>
+                    <li>MLP-based neural fields versus Grid-based neural fields.</li>
+                    <li>Smoothness and robustness of neural fields.</li>
+                    <li>Generative models in neural fields.</li>
+                    <li>Analysis-by-synthesis with neural fields.</li>
+                    <li>Label transfer and correspondence learning in neural fields.</li>
+                    <li>Specific properties in 2D, 3D, 4D, etc., neural fields.</li>
+                    <li>Neural fields for science.</li>
+                    <li>Ethical considerations in neural fields.</li>
                     </strong>
                 </ul>
-                <p>
+<!--                 <p>
                   Papers will be peer-reviewed and comply with the CVPR 2023 proceedings style, format and length. 
                   The deadline for camera ready submission is the same as the main conference. 
                   Papers accepted must be registered and presented to ensure their inclusion in the IEEE Xplore Library. 
@@ -467,7 +447,7 @@
                     <a href="https://cvpr2023.thecvf.com/Conferences/2023/CallForPapers">
                         CVPR 2023 requirements
                     </a>. 
-                </p>
+                </p> -->
                 <p>
                     Paper submission and review site:
                     <a href="https://cmt3.research.microsoft.com/MIPI2023/Submission/Index", class="badge bg-success shadow-success fs-sm", target="_blank">
@@ -475,29 +455,10 @@
                     </a>
                 </p>
                 <br>
-                <!-- <p>
-                  <b>Certificates for Best Paper Award and Best Paper Honorable Mention:</b><br><br>
-                  <p> 
-                    <a href="./Best_Paper_Award.pdf", class="badge bg-primary fs-sm", target="_blank">
-                    <strong>Best Paper Award:</strong>
-                    </a><br>
-                    <b>Paper title:</b> Event-based Image Deblurring with Dynamic Motion Awareness<br>
-                    <b>Authors:</b> Patricia Vitoria, Stamatios Georgoulis, Stepan Tulyakov, Alfredo Bochicchio,  Julius Erbach,  Yuanyou Li<br>
-                    <b>Affiliation:</b> Huawei
-                  </p>
-                  <p> 
-                    <a href="./Best_Paper_Honorable_Mention.pdf", class="badge bg-primary fs-sm", target="_blank">
-                      <strong>Best Paper Honorable Mention:</strong>
-                    </a><br>
-                    <b>Paper title:</b> Continuous Spectral Reconstruction from RGB Images via Implicit Neural Representation<br>
-                    <b>Authors:</b> Ruikang Xu, Mingde Yao, Chang Chen, Lizhi Wang, Zhiwei Xiong<br>
-                    <b>Affiliations:</b> University of Science and Technology of China, Huawei Noah's Ark Lab, Beijing Institute of Technology
-                  </p>
-                </p> -->
               </div>
         </div>
 
-        <div class="row pt-4 pb-3">
+<!--         <div class="row pt-4 pb-3">
           <h4 class="text-center text-sm-start pb-2 pb-lg-0">IJCV Special Issue on MIPI:</h4>
         </div>
         <div class="row">
@@ -518,7 +479,7 @@
           </a>
         </p>
         </div>
-        </div>
+        </div> -->
         </div>
       </section>
 
