--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="description" content="Silicon - Multipurpose Technology Bootstrap Template">
     <meta name="keywords" content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative">
     <meta name="author" content="Createx Studio">
+	  
+	  
+	  
+	  
+    <link rel="icon" href="../assets/img/logo.png">
 
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
