--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	  
 	  
     <link rel="icon" href="../assets/img/logo.png">
+	  
+<!--     <meta property="og:image" content="https://fnzhan.github.io/neural-gauge-fields/img/ngf_logo.png"> -->
 
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
