--- a/index.html
+++ b/index.html
@@ -990,11 +990,11 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <!-- Item -->
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/chongyi_li.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
+                  <img src="../data/fangneng.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Fangneng Zhan</h5>
                   <p class="fs-sm mb-3">Max Planck Institute for Informatics</p>
                   <div class="d-flex justify-content-center">
-                    <a href="https://li-chongyi.github.io/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
+                    <a href="https://fnzhan.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
                       <i class="bx bx-home"></i>
                     </a>
                     <a href="https://scholar.google.com/citations?user=1_I0P-AAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
@@ -1010,7 +1010,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <!-- Item -->
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/shangchen_zhou.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
+                  <img src="../data/adam.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Adam Kortylewski</h5>
                   <p class="fs-sm mb-3">Max Planck Institute for Informatics</p>
                   <div class="d-flex justify-content-center">
@@ -1030,7 +1030,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <!-- Item -->
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/ruicheng_feng.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
+                  <img src="../data/anpei.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Anpei Chen</h5>
                   <p class="fs-sm mb-3">ETH Zurich</p>
                   <div class="d-flex justify-content-center">
@@ -1050,7 +1050,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <!-- Item -->
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/yuekun_dai.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
+                  <img src="../data/ayush.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Ayush Tewari</h5>
                   <p class="fs-sm mb-3">MIT</p>
                   <div class="d-flex justify-content-center">
@@ -1067,7 +1067,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
               <!-- Item -->
               <div class="col-md-3 py-3">
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/qingpeng_zhu.jpg" class="d-block rounded-circle mx-auto mb-3" width="162">
+                  <img src="../data/christian.png" class="d-block rounded-circle mx-auto mb-3" width="162">
                   <h5 class="fw-medium fs-lg mb-1">Christian Theobalt</h5>
                   <p class="fs-sm mb-3">MPI-INF</p>
                   <div class="d-flex justify-content-center">
@@ -1080,23 +1080,6 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                   </div>
                 </div>
               </div>
-
-
-<!--               <div class="col-md-3 py-3">
-                <div class="card card-body card-hover bg-light border-0 text-center mx-2">
-                  <img src="../assets/img/organizer/qianhui_sun.jpg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
-                  <h5 class="fw-medium fs-lg mb-1">Qianhui Sun</h5>
-                  <p class="fs-sm mb-3">SenseBrain</p>
-                  <div class="d-flex justify-content-center">
-                    <a href="https://scholar.google.com/citations?user=4XcLFlIAAAAJ" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bxl-google"></i>
-                    </a>
-                    <a href="mailto:sunqianhui@sensebrain.site" class="btn btn-icon btn-outline-secondary btn-linkedin btn-sm me-2" target="_blank">
-                      <i class="bx bx-envelope"></i>
-                    </a>
-                  </div>
-                </div>
-              </div> -->
 
 
             </div>
