--- a/index.html
+++ b/index.html
@@ -337,6 +337,10 @@
               researchers to delve into the foundational aspects and underlying mechanisms behind the success of neural fields, which could help to lay a sound foundation for the employment 
               of neural fields in broad areas.
             </p>
+		  
+            <div style="text-align: center;">
+		<img src="../data/overview.png" width="1000">
+	    </div>
 <!--             <ul>
               <li>
                 <a href="https://codalab.lisn.upsaclay.fr/competitions/9402", class="badge bg-primary fs-sm", target="_blank">
