--- a/index.html
+++ b/index.html
@@ -503,11 +503,10 @@
           <div class="col-lg-2 mb-3">
             <!-- Nav tabs -->
             <div class="nav flex-nowrap flex-lg-column nav-tabs" role="tablist" aria-orientation="vertical">
-              <a href="#challenge" class="nav-link d-block w-100 rounded-3 p-4 me-2 me-sm-3 me-lg-0 mb-lg-3 active" id="challenge-tab" data-bs-toggle="tab" role="tab" aria-controls="challenge" aria-selected="true">
+<!--               <a href="#challenge" class="nav-link d-block w-100 rounded-3 p-4 me-2 me-sm-3 me-lg-0 mb-lg-3 active" id="challenge-tab" data-bs-toggle="tab" role="tab" aria-controls="challenge" aria-selected="true">
                 <div class="fs-3 fw-bold">Challenge</div>
-              </a>
+              </a> -->
               <a href="#workshop" class="nav-link d-block w-100 rounded-3 p-4" id="workshop-tab" data-bs-toggle="tab" role="tab" aria-controls="workshop" aria-selected="false">
-                <!-- <div class="fs-xl">Day Two</div> -->
                 <div class="fs-3 fw-bold">Workshop</div>
               </a>
             </div>
