--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/fangneng.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Fangneng Zhan</h5>
-                  <p class="fs-sm mb-3">Max Planck Institute for Informatics</p>
+                  <p class="fs-sm mb-3">MPI-INF</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://fnzhan.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
                       <i class="bx bx-home"></i>
@@ -1015,7 +1015,7 @@ In this talk, recent evolutions of image sensors for both RGB and other than RGB
                 <div class="card card-body card-hover bg-light border-0 text-center mx-2">
                   <img src="../data/adam.jpeg" class="d-block rounded-circle mx-auto mb-3" width="162" alt="Ralph Edwards">
                   <h5 class="fw-medium fs-lg mb-1">Adam Kortylewski</h5>
-                  <p class="fs-sm mb-3">Max Planck Institute for Informatics</p>
+                  <p class="fs-sm mb-3">MPI-INF</p>
                   <div class="d-flex justify-content-center">
                     <a href="https://shangchenzhou.com/" class="btn btn-icon btn-outline-secondary btn-facebook btn-sm me-2" target="_blank">
                       <i class="bx bx-home"></i>
